@@ -1,0 +1,49 @@
+<?xml version="1.0"?>
+<!-- Copyright (C) 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
+
+     Copying and distribution of this file, with or without modification,
+     are permitted in any medium without royalty provided the copyright
+     notice and this notice are preserved.  -->
+
+<!DOCTYPE feature SYSTEM "gdb-target.dtd">
+<feature name="org.gnu.gdb.power.core-valgrind-s1">
+  <reg name="r0s1" bitsize="32" type="uint32"/>
+  <reg name="r1s1" bitsize="32" type="uint32"/>
+  <reg name="r2s1" bitsize="32" type="uint32"/>
+  <reg name="r3s1" bitsize="32" type="uint32"/>
+  <reg name="r4s1" bitsize="32" type="uint32"/>
+  <reg name="r5s1" bitsize="32" type="uint32"/>
+  <reg name="r6s1" bitsize="32" type="uint32"/>
+  <reg name="r7s1" bitsize="32" type="uint32"/>
+  <reg name="r8s1" bitsize="32" type="uint32"/>
+  <reg name="r9s1" bitsize="32" type="uint32"/>
+  <reg name="r10s1" bitsize="32" type="uint32"/>
+  <reg name="r11s1" bitsize="32" type="uint32"/>
+  <reg name="r12s1" bitsize="32" type="uint32"/>
+  <reg name="r13s1" bitsize="32" type="uint32"/>
+  <reg name="r14s1" bitsize="32" type="uint32"/>
+  <reg name="r15s1" bitsize="32" type="uint32"/>
+  <reg name="r16s1" bitsize="32" type="uint32"/>
+  <reg name="r17s1" bitsize="32" type="uint32"/>
+  <reg name="r18s1" bitsize="32" type="uint32"/>
+  <reg name="r19s1" bitsize="32" type="uint32"/>
+  <reg name="r20s1" bitsize="32" type="uint32"/>
+  <reg name="r21s1" bitsize="32" type="uint32"/>
+  <reg name="r22s1" bitsize="32" type="uint32"/>
+  <reg name="r23s1" bitsize="32" type="uint32"/>
+  <reg name="r24s1" bitsize="32" type="uint32"/>
+  <reg name="r25s1" bitsize="32" type="uint32"/>
+  <reg name="r26s1" bitsize="32" type="uint32"/>
+  <reg name="r27s1" bitsize="32" type="uint32"/>
+  <reg name="r28s1" bitsize="32" type="uint32"/>
+  <reg name="r29s1" bitsize="32" type="uint32"/>
+  <reg name="r30s1" bitsize="32" type="uint32"/>
+  <reg name="r31s1" bitsize="32" type="uint32"/>
+
+  <reg name="pcs1" bitsize="32" type="code_ptr" regnum="64"/>
+  <reg name="msrs1" bitsize="32" type="uint32"/>
+  <reg name="crs1" bitsize="32" type="uint32"/>
+  <reg name="lrs1" bitsize="32" type="code_ptr"/>
+  <reg name="ctrs1" bitsize="32" type="uint32"/>
+  <reg name="xers1" bitsize="32" type="uint32"/>
+</feature>
